--- a/storefront/components/header/header.module.css
+++ b/storefront/components/header/header.module.css
@@ -29,6 +29,10 @@
   height: var(--header-height);
   padding: 0 80px;
 
+  @media (max-width: 768px) {
+    padding: 0 16px;
+  }
+
   &:after {
     content: '';
     position: absolute;
