--- a/storefront/components/product-card/product-card.module.css
+++ b/storefront/components/product-card/product-card.module.css
@@ -12,6 +12,12 @@
   .button-c {
     gap: 8px;
 
+    @media (max-width: 768px) {
+      width: 100%;
+      max-width: 320px;
+      margin-inline: auto;
+    }
+
     @media (min-width: 768px) {
       gap: 10px;
     }
